[package]
name = "grrs"
version = "0.1.0"
edition = "2021"
authors = ["Sachin Bhat <sachubhat17@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/Sachin-Bhat/grrs"
repository = "https://github.com/Sachin-Bhat/grrs"
keywords = ["cli", "search"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
anyhow = "1.0.58"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
